--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -251,8 +251,7 @@ Navigation
 Hero
 ========================================================================== */
 .hero {
-  min-height: 750px;
-  background: url('../img/hero-min.jpg') center center;
+  background: url('../img/bergerlacke.jpeg') center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -285,6 +284,7 @@ Hero
     margin-bottom: 12%;
   }
 }
+
 .navigation {
   transition: all 300ms ease-in-out;
   position: fixed;
