--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,17 +12,27 @@
 /* ==========================================================================
 Global Styles
 ========================================================================== */
+#accordion {
+  .btn {
+    width: 900px;
+    margin-bottom: 5px;
+    color:black;
+  }
+}
 .group:after {
   content: "";
   display: table;
   clear: both;
 }
+
 .no-padding {
   padding: 0;
 }
+
 .no-margin {
   margin: 0;
 }
+
 a {
   color: $accent-color;
   -webkit-transition-timing-function: ease;
@@ -32,10 +42,13 @@ a {
   -webkit-transition-property: color, border-color, background-color;
   transition-property: color, border-color, background-color;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
   color: $accent-color-hover;
   text-decoration: none;
 }
+
 body {
   font-family: $sans-serif;
   font-weight: $light;
@@ -43,25 +56,33 @@ body {
   -webkit-text-size-adjust: 100%;
   //fix for iOS
 }
+
 *:focus {
   outline: none !important;
 }
-ul, ol {
+
+ul,
+ol {
   margin: 0;
   padding: 0;
 }
+
 ul li {
   list-style: none;
 }
+
 section .header {
   padding-bottom: 30px;
 }
+
 .section-padding {
   padding: $section-padding;
 }
+
 .section-border {
   border-bottom: 1px solid $keyline-color;
 }
+
 .tooltip {
   position: absolute;
   z-index: 1070;
@@ -74,26 +95,32 @@ section .header {
   filter: alpha(opacity=0);
   opacity: 0;
 }
+
 .tooltip.in {
   filter: alpha(opacity=90);
   opacity: .9;
 }
+
 .tooltip.top {
   padding: 5px 0;
   margin-top: -3px;
 }
+
 .tooltip.right {
   padding: 0 5px;
   margin-left: 3px;
 }
+
 .tooltip.bottom {
   padding: 5px 0;
   margin-top: 3px;
 }
+
 .tooltip.left {
   padding: 0 5px;
   margin-left: -3px;
 }
+
 .tooltip-inner {
   max-width: 200px;
   padding: 3px 8px;
@@ -104,6 +131,7 @@ section .header {
   background-color: #000;
   border-radius: 4px;
 }
+
 /* ==========================================================================
 Animations
 ========================================================================== */
@@ -113,47 +141,58 @@ Animations
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
+
 @keyframes pulse2 {
   0% {
     transform: scale(1.1);
   }
+
   50% {
     transform: scale(0.8);
   }
+
   100% {
     transform: scale(1);
   }
 }
+
 .floating-arrow {
   animation-name: floating-arrow;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
+
 @keyframes floating-arrow {
   from {
     transform: translate(-50%, 0)
   }
+
   65% {
     transform: translate(-50%, 15px)
   }
+
   to {
     transform: translate(-50%, 0)
   }
 }
+
 .floating-logo {
   animation-name: floating-logo;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
+
 @keyframes floating-logo {
   from {
     transform: translate(-50%, 0)
   }
+
   50% {
     transform: translate(-50%, 10px)
   }
+
   to {
     transform: translate(-50%, 0)
   }
@@ -162,14 +201,33 @@ Animations
 /* ==========================================================================
 Waypoinsts
 ========================================================================== */
-.wp1, .wp2, .wp3, .wp4, .wp5, .wp6, .wp7, .wp8, .wp9 {
+.wp1,
+.wp2,
+.wp3,
+.wp4,
+.wp5,
+.wp6,
+.wp7,
+.wp8,
+.wp9 {
   visibility: hidden
 }
-.wp8, .wp9 {
+
+.wp8,
+.wp9 {
   -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s
 }
-.bounceInLeft, .bounceInRight, .fadeInUp, .fadeInUpDelay, .fadeInDown, .fadeInUpD, .fadeInLeft, .fadeInRight, .bounceInDown {
+
+.bounceInLeft,
+.bounceInRight,
+.fadeInUp,
+.fadeInUpDelay,
+.fadeInDown,
+.fadeInUpD,
+.fadeInLeft,
+.fadeInRight,
+.bounceInDown {
   visibility: visible
 }
 
@@ -182,6 +240,7 @@ Navigation
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
+
 .nav-toggle {
   position: absolute;
   top: 0;
@@ -190,10 +249,14 @@ Navigation
   padding: 10px 35px 16px 0;
   cursor: pointer
 }
+
 .nav-toggle:focus {
   outline: none
 }
-.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
+
+.nav-toggle span,
+.nav-toggle span:before,
+.nav-toggle span:after {
   content: "";
   position: absolute;
   display: block;
@@ -205,24 +268,210 @@ Navigation
   background: #fff;
   cursor: pointer
 }
+
 .nav-toggle span:before {
   top: -10px
 }
+
 .nav-toggle span:after {
   bottom: -10px
 }
-.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
+
+.nav-toggle span,
+.nav-toggle span:before,
+.nav-toggle span:after {
   -moz-transition: all 300ms ease-in-out;
   -o-transition: all 300ms ease-in-out;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out
 }
+
 .nav-toggle.active span {
   background-color: transparent
 }
-.nav-toggle.active span:before, .nav-toggle.active span:after {
+
+.nav-toggle.active span:before,
+.nav-toggle.active span:after {
   top: 0
 }
+
+.flex-kack>* {
+  flex: 1 auto 1;
+}
+
+.flex-kack::after {
+  content: none !important;
+}
+
+.flex-kack::before {
+  content: none !important;
+}
+
+#ablauf {
+
+  /* The actual timeline (the vertical ruler) */
+  .main-timeline {
+    position: relative;
+  }
+
+  .faq_jonas {
+    h2 {
+      font-family: Arial, Verdana;
+      font-weight: 800;
+      font-size: 2.5rem;
+      color: #091f2f;
+      text-transform: uppercase;
+    }
+
+    .accordion-section .panel-default>.panel-heading {
+      border: 0;
+      background: #f4f4f4;
+      padding: 0;
+    }
+
+    .accordion-section .panel-default .panel-title a {
+      display: block;
+      font-style: italic;
+      font-size: 1.5rem;
+    }
+
+    .accordion-section .panel-default .panel-title a:after {
+      font-family: 'FontAwesome';
+      font-style: normal;
+      font-size: 3rem;
+      content: "\f106";
+      color: #1f7de2;
+      float: right;
+      margin-top: -12px;
+    }
+
+    .accordion-section .panel-default .panel-title a.collapsed:after {
+      content: "\f107";
+    }
+
+    .accordion-section .panel-default .panel-body {
+      font-size: 1.2rem;
+    }
+
+
+  }
+
+  /* The actual timeline (the vertical ruler) */
+  .main-timeline::after {
+    content: "";
+    position: absolute;
+    width: 6px;
+    background-color: #939597;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+  }
+
+  /* Container around content */
+  .timeline {
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+  }
+
+  /* The circles on the timeline */
+  .timeline::after {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -13px;
+    background-color: #939597;
+    border: 5px solid #f5df4d;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+
+  /* Place the container to the left */
+  .left {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0px 80px 20px 0px;
+    left: 0;
+  }
+
+  /* Place the container to the right */
+  .right {
+    padding: 0px 0px 20px 80px;
+    left: 50%;
+  }
+
+  /* Add arrows to the left container (pointing right) */
+  .left::before {
+    content: " ";
+    position: absolute;
+    top: 18px;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+  }
+
+  /* Add arrows to the right container (pointing left) */
+  .right::before {
+    content: " ";
+    position: absolute;
+    top: 18px;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Fix the circle for containers on the right side */
+  .right::after {
+    left: -12px;
+  }
+
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+
+    /* Place the timelime to the left */
+    .main-timeline::after {
+      left: 31px;
+    }
+
+    /* Full-width containers */
+    .timeline {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+    }
+
+    /* Make sure that all arrows are pointing leftwards */
+    .timeline::before {
+      left: 60px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent;
+    }
+
+    /* Make sure all circles are at the same spot */
+    .left::after,
+    .right::after {
+      left: 18px;
+    }
+
+    .left::before {
+      right: auto;
+    }
+
+    /* Make all right containers behave like the left ones */
+    .right {
+      left: 0%;
+    }
+  }
+}
+
 .nav-toggle.active span:before {
   -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -230,6 +479,7 @@ Navigation
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg)
 }
+
 .nav-toggle.active span:after {
   top: 10px;
   -moz-transform: translatey(-10px) rotate(-45deg);
@@ -238,6 +488,7 @@ Navigation
   -webkit-transform: translatey(-10px) rotate(-45deg);
   transform: translatey(-10px) rotate(-45deg)
 }
+
 .navicon {
   position: absolute;
   height: 26px;
@@ -266,19 +517,23 @@ Hero
   .down-arrow a {
     color: $txt-light;
   }
+
   h1 {
     color: $txt-light;
     margin-bottom: 40px;
   }
+
   p.intro {
     color: $txt-light;
     font-size: 20px;
     font-weight: 300;
     margin-bottom: 80px;
   }
+
   .hero-content {
     padding-top: 40%;
   }
+
   .hero-content img {
     width: 55%;
     margin-bottom: 12%;
@@ -290,13 +545,17 @@ Hero
   position: fixed;
   width: 100%;
   z-index: 999;
+  display: flex;
 }
+
 .fixed {
   position: fixed;
   background-color: rgba(55, 36, 40, .88);
   z-index: 999;
   width: 100%;
+  max-height: 90px;
 }
+
 header {
   padding: 50px 0;
   border-bottom: solid 1px rgba(255, 255, 255, 0.2);
@@ -314,12 +573,15 @@ header {
       margin-right: 20px;
     }
   }
+
   .logo {
     display: inline-block;
   }
+
   .logo img {
-    height: 19px;
+    height: 40px;
   }
+
   ul.primary-nav {
     margin: 0 0 0 75px;
     padding: 0;
@@ -335,11 +597,13 @@ header {
           color: $accent-color;
         }
       }
+
       &:last-child a {
         padding-right: 0px;
       }
     }
   }
+
   ul.member-actions {
     li {
       display: inline;
@@ -353,9 +617,11 @@ header {
       }
     }
   }
+
   .header-nav {
     display: inline-block;
   }
+
   .member-actions {
     position: absolute;
     right: 0;
@@ -363,6 +629,7 @@ header {
     transition: all 300ms ease-in-out;
   }
 }
+
 .down-arrow {
   color: #fff;
   font-size: 30px;
@@ -387,6 +654,7 @@ Intro
   color: $accent-color;
   font-weight: bold;
 }
+
 .intro-icon {
   display: inline-block;
   vertical-align: top;
@@ -394,6 +662,7 @@ Intro
   margin-right: 20px;
   width: 40px;
 }
+
 .intro-content {
   display: inline-block;
   width: 80%;
@@ -401,11 +670,13 @@ Intro
 
 #intro {
   padding-top: 40px;
+
   img {
     width: 100%;
     height: auto;
   }
 }
+
 #intro p {
   text-align: center;
 }
@@ -420,14 +691,17 @@ Features-stack
     margin-bottom: 0;
     padding-bottom: 0;
   }
+
   h3 {
     margin: 0 0 20px 0;
   }
+
   span.icon {
     font-size: 35px;
     color: $accent-color;
     font-weight: bold;
   }
+
   .feature-icon {
     display: inline-block;
     vertical-align: top;
@@ -435,38 +709,46 @@ Features-stack
     margin-right: 20px;
     width: 35px;
   }
+
   .feature-content {
     display: inline-block;
     width: 75%;
   }
+
   .intro-icon {
     display: inline-block;
     vertical-align: top;
     padding: 6px 0 0 0;
     margin-right: 20px;
   }
+
   .intro-content {
     display: inline-block;
     width: 80%;
   }
+
   ul.features-stack {
     margin-top: 50px;
   }
+
   ul.features-stack li {
     margin-top: 20px;
     padding-bottom: 20px;
     border-bottom: solid 1px $keyline-color;
   }
+
   ul.features-stack li:last-child {
     padding-bottom: 0px;
     border-bottom: none;
   }
+
   .ipad-wrap {
     width: 706px;
     height: 1002px;
     background: url("../img/ipad-device.png") no-repeat center center;
     z-index: 1;
   }
+
   .iphone-wrap {
     width: 304px;
     height: 620px;
@@ -476,15 +758,19 @@ Features-stack
     bottom: 129px;
     z-index: 2;
   }
+
   .device-showcase {
     position: absolute;
     bottom: -365px;
     right: 61%;
   }
 }
-.features .responsive-feature-img, .features-extra .responsive-feature-img {
+
+.features .responsive-feature-img,
+.features-extra .responsive-feature-img {
   display: none;
 }
+
 .devices {
   position: relative;
 }
@@ -499,6 +785,7 @@ Features-stack
   .btn {
     margin-top: 20px;
   }
+
   .macbook-wrap {
     position: absolute;
     width: 916px;
@@ -528,16 +815,20 @@ Features-stack
     margin-left: -8px;
     font-style: normal;
   }
+
   h2 {
     color: #fff;
     margin: 0 0 20px 0;
   }
+
   p {
     color: #ACB1B4;
   }
+
   .btn {
     margin-top: 10px;
   }
+
   .logo-placeholder {
     width: 230px;
     height: 230px;
@@ -556,6 +847,7 @@ Features-stack
     padding-right: 100px;
     border-right: solid 1px $keyline-color;
   }
+
   .rightcol {
     padding-left: 100px;
   }
@@ -582,6 +874,7 @@ Features-stack
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
   }
+
   h2 {
     font-size: $blog-post-title;
     color: $txt-accent;
@@ -589,9 +882,11 @@ Features-stack
     text-transform: uppercase;
     margin-top: 35px;
   }
+
   .btn {
     margin-top: 20px;
   }
+
   .blog-img-wrap {
     position: relative;
     overflow: hidden;
@@ -609,6 +904,7 @@ Features-stack
       filter: alpha(opacity=0);
       opacity: 0;
     }
+
     i {
       color: $white-color;
       font-size: 20px;
@@ -619,27 +915,35 @@ Features-stack
       right: 35px;
     }
   }
-  .blog-img-wrap:hover img, .blog-img-wrap:focus img {
+
+  .blog-img-wrap:hover img,
+  .blog-img-wrap:focus img {
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
   }
-  .blog-img-wrap:hover .overlay, .blog-img-wrap:focus .overlay {
+
+  .blog-img-wrap:hover .overlay,
+  .blog-img-wrap:focus .overlay {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
     filter: alpha(opacity=1);
     opacity: 1;
     z-index: 9;
   }
+
   figcaption i {
     margin-left: 5px;
     font-size: 15px;
   }
+
   figcaption a.blog-post-title {
     color: $txt-primary;
   }
-  figcaption a.blog-post-title:hover, figcaption a.blog-post-title:focus {
+
+  figcaption a.blog-post-title:hover,
+  figcaption a.blog-post-title:focus {
     color: $txt-secondary;
   }
 }
@@ -665,11 +969,13 @@ Engagement Pics
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
   }
+
   .img-wrap {
     position: relative;
     overflow: hidden;
     border-radius: 4px;
   }
+
   .img-wrap .overlay {
     position: absolute;
     width: 100%;
@@ -681,7 +987,9 @@ Engagement Pics
     transition: all 300ms ease-in-out;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
-    opacity: 0; }
+    opacity: 0;
+  }
+
   .img-wrap i {
     color: #fff;
     font-size: 15px;
@@ -689,18 +997,26 @@ Engagement Pics
     width: 15px;
     height: 15px;
     top: 6px;
-    right: 6px; }
-  .img-wrap:hover img, .img-wrap:focus img {
+    right: 6px;
+  }
+
+  .img-wrap:hover img,
+  .img-wrap:focus img {
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
     -webkit-transform: scale(1.1);
-    transform: scale(1.1); }
-  .img-wrap:hover .overlay, .img-wrap:focus .overlay {
+    transform: scale(1.1);
+  }
+
+  .img-wrap:hover .overlay,
+  .img-wrap:focus .overlay {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
     filter: alpha(opacity=1);
     opacity: 1;
-    z-index: 9; }
+    z-index: 9;
+  }
+
   .diamond {
     width: 230px;
     height: 230px;
@@ -710,6 +1026,7 @@ Engagement Pics
     transform: translateX(-50%);
     z-index: 500;
   }
+
   .ring {
     width: 75px;
     height: 75px;
@@ -728,6 +1045,7 @@ Embed video
 #video-bg {
   height: 300px;
 }
+
 #video-content {
   width: 100%;
   height: 100%;
@@ -736,12 +1054,14 @@ Embed video
   background: rgba(17, 17, 17, 0.5);
   text-align: center;
 }
+
 #video-content h5 {
   color: #ffffff;
   font-size: 30px;
   font-weight: 300;
   letter-spacing: 10px;
 }
+
 #video-content p {
   color: #ffffff;
 }
@@ -753,11 +1073,13 @@ Google map
   height: 500px;
   width: 100%;
 }
+
 #map-content-wrapper {
   position: relative;
   margin-top: -502px;
   margin-bottom: 150px;
 }
+
 #map-content {
   margin-top: 40px;
   padding: 50px 60px;
@@ -765,6 +1087,7 @@ Google map
   -webkit-transition: opacity 0.5s, visibility 0.6s, margin-top 0.5s;
   transition: opacity 0.5s, visibility 0.6s, margin-top 0.5s;
 }
+
 #btn-show-content {
   padding: 20px;
   background: #fff;
@@ -773,13 +1096,16 @@ Google map
   -webkit-transition: opacity 0.5s, visibility 0.6s, margin-top 0.5s;
   transition: opacity 0.5s, visibility 0.6s, margin-top 0.5s;
 }
+
 .toggle-map-content {
   opacity: 0;
   visibility: hidden;
 }
+
 .pointer-events-none {
   pointer-events: none;
 }
+
 .pointer-events-auto {
   pointer-events: auto;
 }
@@ -789,13 +1115,16 @@ RSVP form
 ========================================================================== */
 .rsvp {
   padding-bottom: 140px;
+
   .rsvp-form {
     .rsvp-btn {
       padding: 15px 0;
       border-radius: 3px;
       width: 100%;
       font-size: 13px;
+      
     }
+
     .form-input-group {
       width: 100%;
       height: 55px;
@@ -808,9 +1137,9 @@ RSVP form
       position: relative;
 
       i {
-        color: $accent-color;
         font-size: 14px;
       }
+
       i:after {
         content: "";
         height: 30px;
@@ -821,13 +1150,18 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+
+      i.fa-user,
+      i.fa-users,
+      i.fa-envelope,
+      .fa-key {
         font-size: 14px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         margin-left: 20px;
       }
+
       input {
         padding-left: 68px;
         width: 100%;
@@ -837,17 +1171,24 @@ RSVP form
         border-radius: 6px;
         border: none;
       }
+
       input::-webkit-input-placeholder {
-        color: $form-placeholder;
-      }
+        color: #000;
+        filter: saturate(200%);      }
+
       input:-moz-placeholder {
-        color: $form-placeholder;
+        color: #000;
+        filter: saturate(200%);
       }
+
       input::-moz-placeholder {
-        color: $form-placeholder;
+        color: #000;
+        filter: saturate(200%);
       }
+
       input:-ms-input-placeholder {
-        color: $form-placeholder;
+        color: #000;
+        filter: saturate(200%);
       }
     }
   }
@@ -861,6 +1202,7 @@ footer {
     border-top: 1px solid $keyline-color;
     padding-bottom: 20px;
   }
+
   .to-top-wrapper {
     font-size: 30px;
     display: block;
@@ -872,6 +1214,7 @@ footer {
     border: 1px solid $keyline-color;
     background: #fff;
   }
+
   .to-top-wrapper .to-top {
     display: block;
     -webkit-transition: all .3s ease-in-out;
@@ -880,9 +1223,11 @@ footer {
     -o-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
   }
+
   .to-top-wrapper .to-top:hover {
     margin-top: -5px;
   }
+
   span.fa-heart {
     color: #ff415c;
     font-size: 18px;
@@ -894,8 +1239,9 @@ footer {
 Bootstrap override
 ========================================================================== */
 body.modal-open {
-  padding-right:0 !important;
+  padding-right: 0 !important;
 }
+
 .modal-body {
-  padding:25px;
+  padding: 25px;
 }
