--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -17,7 +17,9 @@ Global Styles
     width: 600px;
     margin-bottom: 5px;
     color:black;
-
+  }
+  @media screen and (max-width:768px) {
+    width: 300px !important;
   }
 }
 .group:after {
