--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,12 +14,9 @@ Global Styles
 ========================================================================== */
 #accordion {
   .btn {
-    width: 600px;
+    min-width: 300px;
     margin-bottom: 5px;
     color:black;
-  }
-  @media screen and (max-width:768px) {
-    width: 300px !important;
   }
 }
 .group:after {
